# koelingo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
cmake/: FindPortAudio.cmake
cpp/: CMakeLists.txt
cpp/audio/: CMakeLists.txt  audio_capture.cc  audio_capture.h
docs/: 1.requirements.md  2.design.md  3.implementation.md  Doxyfile  code_organization.md
scripts/: build.sh  local_setup.sh  rm_trailing_space.sh  run.sh
src/: main.py
src/audio/: CMakeLists.txt  __init__.py  audio_capture.py
src/audio/pybind/: README.md  __init__.py  bindings.cc
src/stt/: __init__.py  whisper_stt.py
src/ui/: __init__.py  audio_visualizer.py  main_window.py
src/ui/resources/: __init__.py  icons.py
tests/: __init__.py  custom_test_runner.py  run_tests.py  stability_tests.py
tests/audio/: __init__.py  test_audio_capture.py  test_continuous_processing.py
tests/integration/: __init__.py  test_audio_stt.py  test_jp_audio_processing.py  test_realtime_pipeline.py
tests/stt/: __init__.py  test_continuous_stt.py  test_performance.py  test_whisper_stt.py
